Bug 346848 - unable to disable kde services
Summary: unable to disable kde services
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kded (other bugs)
Version First Reported In: 5.3.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Daniel Molkentin
URL: https://vid.me/ZmpO
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-28 14:49 UTC by temporary987
Modified: 2015-08-21 11:24 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description temporary987 2015-04-28 14:49:49 UTC
If I switch off some KDE services on kcm_ksmserver, after I go back to systemsettings and return to that menu they are all enabled: my changes are not being saved.

Reproducible: Always

Steps to Reproduce:
1. systemsettings
2. kcm_ksmserver
3. services
4. disable some of them
5. close systemsettings
6. go back to kcm_ksmserver

Actual Results:  
Changes revert

Expected Results:  
Changes should be saved
Comment 1 Christoph Feck 2015-04-29 00:35:13 UTC
Are you sure this report is for kcmsmserver? It looks related to kcmkded.
Comment 2 temporary987 2015-04-29 04:31:08 UTC
Please forgive me, if i was wrong: I was not sure, where to place this bug.
Comment 3 Ragnar Thomsen 2015-08-20 20:19:35 UTC
Git commit 15253a7463f472e4ce977d95d91881f21305e471 by Ragnar Thomsen.
Committed on 20/08/2015 at 20:18.
Pushed by rthomsen into branch 'Plasma/5.4'.

Fix loading/saving in kded kcm

Fix loading/saving of the autoload status of kded startup services in
the kcm.

Loading was broken due to a KPluginMetaData::pluginId() being passed to
autoloadEnabled(), instead of a KPluginMetaData.

Saving was broken due to comparing KPluginMetaData::fileName() to
treeitem->data(LibraryRole). This didn't work due to
KPluginMetaData::fileName() sometimes containing (part of) the path in
addition to the plugin/library name. This was solved by using
KPluginMetaData::pluginId() instead of KPluginMetaData::fileName().
Related: bug 347429
REVIEW: 124840

M  +3    -3    kcms/kded/kcmkded.cpp

http://commits.kde.org/plasma-desktop/15253a7463f472e4ce977d95d91881f21305e471